<?xml version="1.0" encoding="utf-8"?>

<!-- Matthew Brennan SDA Assignment-4  tab1_home.xml  -->

<!--
This Fragment offers the user the facilities to input their Name and Address to which to be sent a T-shirt,
either selected from the products list or customised by themselves by taking a photo with their phone camera,
he activity then e-mails the details to the T shirt company.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@color/tan_background"
    android:id="@+id/relativeLayout">
    <!--
    Below provides format information and string references for the
    first EditText box which takes in the users Name.
    -->
    <EditText
        android:id="@+id/editCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--
    Below provides format information and an image references for the
    ImageView element.
    -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCustomer"
        app:srcCompat="@drawable/basic" />
    <!--
    Below provides format information and string references for the
    first TextView box which indicated to Take a photo for T-Shirt.
    -->
    <TextView
        android:id="@+id/imageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text= "@string/take_photo"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <!--
    Below provides format information and string references for the
    first EditText box which takes in the address to deliver to.
    -->
    <EditText
        android:id="@+id/editOptional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginLeft="24dp" />
    <!--
    Below provides format information and string references for the
    second TextView box which indicates then Number of days for delivery.
    -->
    <TextView
        android:id="@+id/editCollect"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/ready_time"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/editCustomer"
        app:layout_constraintTop_toBottomOf="@+id/editOptional"
        app:layout_constraintVertical_bias="0.125" />
    <!--
    Below provides format information for the Spinner from which can be selected then number of days
    expected for delivery
    -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editCollect"
        app:layout_constraintTop_toBottomOf="@+id/editOptional"
        app:layout_constraintVertical_bias="0.217" />
    <!--
    Below provides format information and string references for the
    Button which launches a mail app when pressed.
    -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="38dp"
        android:text="@string/send_order"
        android:textColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageText"
        app:layout_constraintTop_toBottomOf="@+id/editCollect"
        android:layout_marginRight="116dp"
        android:layout_marginLeft="69dp" />
</android.support.constraint.ConstraintLayout>

