<?xml version="1.0" encoding="utf-8"?>

<!-- Matthew Brennan SDA Assignment-4  tab4_collection.xml  -->

<!--
This Fragment offers the user a scrollable list from which to select an address from where they can pick
up their orders.
-->
<!-- ConstraintLayout Layout-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#416600"
    tools:layout_editor_absoluteY="25dp">
    <!--
  Below provides format information and string references for the
  first TextView box which advertises then online store.
  -->
    <TextView
        android:id="@+id/collection_cool_coder_top"
        android:layout_width="329dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cool_coder_text"
        android:textAlignment="center"
        android:textColor="#e6c222"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--
      Below provides format information and string references for the
      forth TextView box which indicates page title.
      -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="334dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/national_collection_points"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#ff0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collection_cool_coder_top"
        app:layout_constraintVertical_chainStyle="packed" />
    <!--
         Below provides format information and string references for the
         sixth TextView box which indicates a dropdown list from which
         to select a collection point.
         -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="318dp"
        android:layout_height="86dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/collection_points_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
    <!--
        Below provides format information and string references for the
        sixth ScrollView which contains a list of all then addresses of
        collection points available.
        -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list_locations"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#b3d2ee"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </ScrollView>
    <!--
            Below provides format information and string references for the
            bottom of the page TextView box which advertised the onLine Store.
            -->
    <TextView
        android:id="@+id/collection_cool_coder_bottom"
        android:layout_width="289dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/cool_coder_text"
        android:textAlignment="center"
        android:textColor="#e6c222"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
</android.support.constraint.ConstraintLayout>